[gd_scene load_steps=8 format=3 uid="uid://bem4dv1hls5hn"]

[ext_resource type="Texture2D" uid="uid://c3mh1jftkpebp" path="res://assets/shapes/red_body_square.png" id="1_1p0uw"]
[ext_resource type="Script" path="res://enemies/enemy_1.gd" id="1_giv7u"]
[ext_resource type="Texture2D" uid="uid://mvcpnqkkbadv" path="res://assets/faces/face_f.png" id="2_1wnvu"]
[ext_resource type="Texture2D" uid="uid://0vd5mloomfx" path="res://assets/hands/red_hand_closed.png" id="3_13dr0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p2omh"]
size = Vector2(384, 384)

[sub_resource type="CircleShape2D" id="CircleShape2D_30mm4"]
radius = 40.0

[sub_resource type="CircleShape2D" id="CircleShape2D_nmlbh"]
radius = 40.0

[node name="Enemy1" type="RigidBody2D" groups=["enemy"]]
collision_layer = 8
collision_mask = 13
mass = 3.5
gravity_scale = 2.0
linear_damp = 1.0
angular_damp = 1.0
script = ExtResource("1_giv7u")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_p2omh")

[node name="RedBodySquare" type="Sprite2D" parent="."]
scale = Vector2(2.4, 2.4)
texture = ExtResource("1_1p0uw")

[node name="Face" type="Node2D" parent="."]
position = Vector2(-20, -15)

[node name="Face" type="Sprite2D" parent="Face"]
texture = ExtResource("2_1wnvu")

[node name="HandL" type="Node2D" parent="."]
position = Vector2(-280, 0)
scale = Vector2(-1.6, 1.6)

[node name="HitAreaL" type="Area2D" parent="HandL"]
collision_layer = 16
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HandL/HitAreaL"]
shape = SubResource("CircleShape2D_30mm4")

[node name="Fist" type="Sprite2D" parent="HandL"]
texture = ExtResource("3_13dr0")

[node name="HandR" type="Node2D" parent="."]
position = Vector2(264, 0)
scale = Vector2(1.6, 1.6)

[node name="HitAreaR" type="Area2D" parent="HandR"]
collision_layer = 16
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HandR/HitAreaR"]
shape = SubResource("CircleShape2D_nmlbh")

[node name="Fist" type="Sprite2D" parent="HandR"]
texture = ExtResource("3_13dr0")

[connection signal="body_entered" from="HandL/HitAreaL" to="." method="_on_hit_area_l_body_entered"]
[connection signal="body_exited" from="HandL/HitAreaL" to="." method="_on_hit_area_l_body_exited"]
[connection signal="body_entered" from="HandR/HitAreaR" to="." method="_on_hit_area_r_body_entered"]
[connection signal="body_exited" from="HandR/HitAreaR" to="." method="_on_hit_area_r_body_exited"]
